# DATA-INFRASTRUCTURE-FOR-TRUSTLESS-MARKETS

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  README.md  config.json  docker-compose.yml  package.json  requirements.txt  tsconfig.json
analytics-api/: README.md
api/: queryResolver.ts  schema.graphql
dashboard-visuals/: README.md  index.html
data-indexer/: README.md
docker/: Dockerfile.api  Dockerfile.graphql  Dockerfile.indexer  Dockerfile.ml  Dockerfile.websocket
frontend/: .env.example  README.md  next.config.js  package.json  tailwind.config.js
indexer/: lendingRateIndexer.ts  liquidityIndexer.ts  tokenIndexer.ts
infra/: .env.example  deploy.sh  docker-compose.yml
ml/: feedTrainer.py  fraudAlertsPipeline.py  requirements.txt
ml-anomaly-detector/: README.md
monitoring/: grafana-dashboard.json  prometheus-rules.yaml
n8n/: FLOW_SPEC.md  IMPORT_GUIDE.md  MODULAR_NODES_GUIDE.md  PYTHON_INTEGRATION_GUIDE.md  gpu-rental-workflow.json
oracle/: FeedAggregator.sol  OracleCircuitBreaker.sol  OracleGovernance.sol  SlashableOracleManager.sol  zkTimestampVerifier.sol
oracle-feeds/: README.md
price-engine/: .env.example  Dockerfile  README.md  pyproject.toml
price-engine/app/: __init__.py  main.py
price-engine/app/core/: __init__.py  models.py  surge.py
price-engine/app/providers/: __init__.py  hyperstack.py  lambda_labs.py  runpod.py  salad.py  vast.py
pyflow-service/: Dockerfile  README.md  main.py  pyproject.toml
pyflow-service/flows/: arbitrage_bot.py  pricing_optimizer.py
(+52 files in other folders)
