[project]
name = "gpu-pyflow-service"
version = "0.1.0"
description = "PyFlow workflows for GPU rental arbitrage and automation"
requires-python = ">=3.12"
dependencies = [
    "prefect>=2.19.0",
    "prefect-docker>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
